# rootoftrust

./: Keycore.dep  Keycore.ewd  Keycore.ewp  Keycore.ewt  Keycore.eww  README.md
docs/Keycore Specification/flowchart/: generate.graphml  get.graphml  get_id.graphml  read_sm_pk.graphml
docs/docs/Keycore Specification/: Keycore Protocol.md
docs/docs/Keycore Specification/flowchart/: get_version.graphml  read_device_pk.graphml  read_hash_code.graphml  sign.graphml
lib/CMSIS/Device/ST/STM32F0xx/Source/Templates/arm/: startup_stm32f0xx.s
lib/CMSIS/Device/ST/STM32F30x/Source/Templates/arm/: startup_stm32f30x.s
lib/CMSIS/Device/ST/STM32F37x/Source/Templates/arm/: startup_stm32f37x.s
lib/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/: startup_stm32f40xx.s
lib/CMSIS/Device/ST/STM32L1xx/Source/Templates/arm/: startup_stm32l1xx_hd.s  startup_stm32l1xx_md.s
lib/Crypto/ed25519/: verify.c
settings/: Keycore.Debug.cspy.bat  Keycore.Debug.cspy.ps1  Keycore.Debug.driver.xcl  Keycore.Debug.general.xcl  Keycore.dbgdt  Keycore.dnx  Keycore.wsdt
src/: cmd_handler.c  cmd_handler.h  keycore.c  keycore.h  keys.c  keys.h  main.c  package.h  serial.c  serial.h  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  system.c  system.h  utils.c  utils.h
tests/test_command/: CMakeLists.txt
tests/test_command/src/: keys.c  keys.h  main.c  plaintext.c  plaintext.h  serial.c  serial.h  test.c  test.h
tests/test_command/src/ed25519/: keypair.c  sign.c
